# codex-rotator

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: build-cli.mjs  build-sidecar.mjs
server/: cli.test.ts  cli.ts  index.ts
server/lib/: account-service.test.ts  account-service.ts  accounts.test.ts  accounts.ts  auth-file.ts  config.ts  dashboard-state.ts  mutation-lock.ts  oauth.ts  openai.ts  security.ts  store.ts  types.ts
src/: main.tsx  router.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: logo.tsx
src/components/layout/: app-shell.tsx  theme-toggle.tsx
src/components/ui/: accordion-card.tsx  badge.tsx  button.tsx  card.tsx  chart.tsx  input.tsx
src/hooks/: use-theme.ts
src/lib/: api.ts  env.ts  types.ts
src/routes/: dashboard.tsx  onboarding.tsx  root.tsx
